<resources>
    <string name="app_name">MapApplication</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>


    <string name="point_name">Point name</string>
    <string name="code">Code</string>
    <string name="east">East</string>
    <string name="north">North</string>
    <string name="elevation">Elevation</string>
    <string name="save_place">Save place</string>
    <string name="current_location">Current Location</string>
    <string name="show_last_positions">Show Last Positions</string>
    <string name="error_null_name">Place name can\'t be null</string>
    <string name="error_null_code" >Code can\'t be null</string>
    <string name="label_north"><![CDATA[ North:   <font color="#000">  %s </font> ]]></string>
    <string name="label_east"><![CDATA[ East:   <font color="#000">  %s </font>]]></string>
    <string name="label_elevation"><![CDATA[ Elevation:   <font color="#000">  %s </font>]]></string>
    <string name="message_currentlocation_is_null">At first enable GPS location</string>
    <string name="last_positions">Last Positions</string>

</resources>