<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="location"
            type="android.location.Location" />

        <variable
            name="viewModel"
            type="ir.malihemoradi.mapapplication.viewModel.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.6"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_point_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/point_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_east"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_east"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/east"
                android:text="@{Double.toString(location.latitude)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_north"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_east">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_north"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/north"
                android:text="@{Double.toString(location.longitude)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_north">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/elevation"
                android:text="@{Double.toString(location.accuracy)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout_elevation"
            app:layout_constraintVertical_bias="0.926" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

<!--    android:onClick="@{()->viewModel.saveNewPoint(edt_point_name.getText().toString(),edt_code.getText().toString(),edt_east.getText().toString(),edt_north.getText().toString(),edt_elevation.getText().toString())}"-->
