<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@layout/fragment_map" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_activation_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/current_location"
        app:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/primaryColor"
        app:srcCompat="@drawable/ic_round_gps_fixed_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_show_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_format_list_bulleted_24"
        android:elevation="0dp"
        android:text="@string/show_last_positions"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:elevation="0dp"
        app:icon="@drawable/ic_round_map_24"
        app:iconSize="20dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/primaryColor" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/save_place"
        android:text="@string/save_place"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="60dp"
        app:icon="@drawable/ic_round_add_location_24"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/primaryColor" />

</androidx.constraintlayout.widget.ConstraintLayout>


